--- a/caihongsite/css/style.css
+++ b/caihongsite/css/style.css
@@ -85,6 +85,8 @@ h1.h1public {
 h2.cv {
     color: rgba(14, 61, 115, 1);
     margin-top: 40px;
+    margin-left: 150px;
+    margin-right: 150px;
 }
 
 h3 {
